--- a/kafka-to-elastic-service/src/main/docker/Dockerfile-bellsoft
+++ b/kafka-to-elastic-service/src/main/docker/Dockerfile-bellsoft
@@ -28,6 +28,7 @@ RUN chmod +x check-kafka-topics-created-from-docker-bellsoft.sh
 COPY --from=builder application/dependencies/ ./
 COPY --from=builder application/spring-boot-loader/ ./
 COPY --from=builder application/snapshot-dependencies/ ./
+RUN true #Fake layer to fix GitHub issue `layer does not exist`
 COPY --from=builder application/application/ ./
 ENTRYPOINT ["./check-kafka-topics-created-from-docker-bellsoft.sh"]
 #ENTRYPOINT ["java", "-Djava.security.egd=file:/dev/./urandom", "org.springframework.boot.loader.JarLauncher"]
