--- a/analytics-service/src/test/resources/application.yml
+++ b/analytics-service/src/test/resources/application.yml
@@ -9,6 +9,22 @@ spring:
       resourceserver:
         jwt:
           issuer-uri: http://localhost:8181/realms/gelenler-tutorial
+  datasource:
+    url: jdbc:h2:mem:test_db;DB_CLOSE_DELAY=-1;MODE=PostgreSQL
+    driver-class-name: org.h2.Driver
+  jpa:
+    open-in-view: false
+    show-sql: true
+    database: H2
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQL95Dialect
+        use_sql_comments: false
+        format_sql: true
+        jdbc.batch_size: 50
+        order_insertes: true
+        order_updates: true
+    database-platform: org.hibernate.dialect.PostgreSQL95Dialect
   sql:
     init:
       schema-locations: classpath:init-schema.sql
