--- a/analytics-service/src/test/resources/application.yml
+++ b/analytics-service/src/test/resources/application.yml
@@ -21,6 +21,7 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQL95Dialect
         use_sql_comments: false
         format_sql: true
+        generate_statistics: true
         jdbc.batch_size: 50
         order_insertes: true
         order_updates: true
